// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/UINTEGER.proto";


package pusGroundModel.protobuf;

message Pus011EncapsulatingTc {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER sourceId = 1;
  optional ccsds_mal.protobuf.UINTEGER commandApid = 2;
  optional ccsds_mal.protobuf.UINTEGER sequenceCount = 3;
}
